--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>toland_flight</name>
+  <name>to_landing_detector</name>
   <version>1.0.0</version>
-  <description>The toland_flight package that checks if a UAV is flat on the ground.</description>
+  <description>The to_landing_detector package that checks if a UAV is flat on the ground.</description>
 
   <!-- MAINTAINERS -->
   <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>
