--- a/package.xml
+++ b/package.xml
@@ -8,13 +8,15 @@
   <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>
 
   <!-- LICENSE -->
-  <license>BSD-2-Clause</license>
+  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>
 
   <!-- URL -->
   <!-- <url type="website">http://wiki.ros.org/toland_flight</url> -->
 
   <!-- AUTHORS -->
   <author email="martin.scheiber@aau.at">Martin Scheiber</author>
+  <author email="alessandro.fornasier@aau.at">Alessandro Fornasier</author>
+  <author email="christian.brommer@aau.at">Christian Brommer</author>
 
   <!-- DEPENDENCIES -->
   <buildtool_depend>catkin</buildtool_depend>
